# check-typing-namedtuple-subclasses-subclasses

./: Cargo.toml  README.md  example.py
src/: main.rs
