[package]
name = "namedtuple-research"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
rustpython-ast = { git = "https://github.com/RustPython/Parser", version = "0.4.0" }
rustpython-parser = { git = "https://github.com/RustPython/Parser", version = "0.4.0" }
